crates/pg_syntax/tests/snapshots/postgres_regress/float8@40.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT f.* FROM FLOAT8_TBL f WHERE  f.f1 <= '1004.3';"
---
SelectStmt@0..53
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..10
    ColumnRef@7..10
      Ident@7..8 "f"
      Ascii46@8..9 "."
      AStar@9..10
        Ascii42@9..10 "*"
  Whitespace@10..11 " "
  From@11..15 "FROM"
  Whitespace@15..16 " "
  RangeVar@16..28
    Ident@16..26 "FLOAT8_TBL"
    Whitespace@26..27 " "
    Alias@27..28
      Ident@27..28 "f"
  Whitespace@28..29 " "
  Where@29..34 "WHERE"
  Whitespace@34..36 "  "
  AExpr@36..52
    ColumnRef@36..40
      Ident@36..37 "f"
      Ascii46@37..38 "."
      Ident@38..40 "f1"
    Whitespace@40..41 " "
    LessEquals@41..43 "<="
    Whitespace@43..44 " "
    AConst@44..52
      Sconst@44..52 "'1004.3'"
  Ascii59@52..53 ";"

