crates/pg_syntax/tests/snapshots/postgres_regress/float8@45.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT f.f1 ^ '2.0' AS square_f1\n   FROM FLOAT8_TBL f where f.f1 = '1004.3';"
---
SelectStmt@0..76
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..32
    AExpr@7..19
      ColumnRef@7..11
        Ident@7..8 "f"
        Ascii46@8..9 "."
        Ident@9..11 "f1"
      Whitespace@11..12 " "
      Ascii94@12..13 "^"
      Whitespace@13..14 " "
      AConst@14..19
        Sconst@14..19 "'2.0'"
    Whitespace@19..20 " "
    As@20..22 "AS"
    Whitespace@22..23 " "
    Ident@23..32 "square_f1"
  Newline@32..33 "\n"
  Whitespace@33..36 "   "
  From@36..40 "FROM"
  Whitespace@40..41 " "
  RangeVar@41..53
    Ident@41..51 "FLOAT8_TBL"
    Whitespace@51..52 " "
    Alias@52..53
      Ident@52..53 "f"
  Whitespace@53..54 " "
  Where@54..59 "where"
  Whitespace@59..60 " "
  AExpr@60..75
    ColumnRef@60..64
      Ident@60..61 "f"
      Ascii46@61..62 "."
      Ident@62..64 "f1"
    Whitespace@64..65 " "
    Ascii61@65..66 "="
    Whitespace@66..67 " "
    AConst@67..75
      Sconst@67..75 "'1004.3'"
  Ascii59@75..76 ";"

